# app/Http/Controllers/Api/StageController.php
@@ -8,6 +8,52 @@ use App\Models\Stage;
 
 class StageController extends Controller
 {
+    /**
+     * @OA\Post(
+     *      path="/Stage/add",
+     *      operationId="add",
+     *      tags={"Stages"},
+     *      summary="Add a stage",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Stage id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          ),),
+     *      @OA\Parameter(
+     *          name="name_pt",
+     *          description="Name of Stage",
+     *          
+     *          in="path",
+     *          @OA\Schema(
+     *              type="varchar"
+     *          ),),
+     *      @OA\Parameter(
+     *          name="name_en",
+     *          description="Name of Stage in English",
+     *          
+     *          in="path",
+     *          @OA\Schema(
+     *              type="varchar"
+     *          ),),
+     *     @OA\Parameter(
+    *           name="description",
+     *          description= "Description of Stage",
+     *          
+     *          in="path",
+     *          @OA\Schema(
+     *              type="varchar"
+     *          ),),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       )
+     *     )
+     *
+     * Returns list of products
+     */
     public function add(Request $request){
         try{
             $stage = new Stage();
@@ -28,7 +74,22 @@ class StageController extends Controller
         }
 
     }
-    public function listAll(){
+    /**
+     *      @OA\Get(
+     *      path="/Stage/list",
+     *      operationId="listAllStage",
+     *      tags={"Stages"},
+     *      summary="Get list of Stage",
+     *      description="Returns list of Stages",
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       )
+     *     )
+     *
+     * Returns list of projects
+     */
+    public function listAllStage(){
         try{
 
             $stages = Stage::all();
@@ -40,7 +101,30 @@ class StageController extends Controller
 
         }
     }
-    public function listOne($id){
+    /**
+     * @OA\Get(
+     *      path="/Stage/list/{id}",
+     *      operationId="listOneStage",
+     *      tags={"Stages"},
+     *      description="Return a Stage",
+     *      @OA\Parameter(
+     *          name="id",
+     *          description="Stage id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       ),
+     *      @OA\Response(response=400, description="Bad request"),
+     *      @OA\Response(response=404, description="Resource Not Found"),
+     * )
+     */
+    public function listOneStage($id){
         try{
 
             $stages = Stage::find($id);
@@ -64,6 +148,7 @@ class StageController extends Controller
 
         }
     }
+
     public function update(Request $request, $id){
         try{
 
